Add FeatureGate attribute to Counter page.

--- a/AppConfiguration-Test/Components/Pages/Counter.razor
+++ b/AppConfiguration-Test/Components/Pages/Counter.razor
@@ -1,6 +1,8 @@
 ﻿@page "/counter"
+@using Microsoft.FeatureManagement.Mvc
 @rendermode InteractiveServer
 @inject IConfiguration Configuration
+@attribute [FeatureGate("WeatherEnabled")]
 
 <PageTitle>Counter</PageTitle>
 
